crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__basic__delete_invoice_line.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "affected_rows": 1,
      "returning": [
        {
          "__value": [
            {
              "invoice_line_id": 90,
              "quantity": 1
            }
          ]
        }
      ]
    }
  ]
}
