crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__basic__delete_playlist.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "affected_rows": 2,
      "returning": [
        {
          "playlist_id": 1
        },
        {
          "playlist_id": 8
        }
      ]
    }
  ]
}
