crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__basic__delete_playlist_track.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "type": "procedure",
      "result": {
        "returning": [
          {
            "playlist_id": 1
          },
          {
            "playlist_id": 8
          }
        ],
        "affected_rows": 2
      }
    }
  ]
}
