crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__basic__experimental_delete_and_update_playlist_track.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "type": "procedure",
      "result": {
        "returning": [
          {
            "playlist_id": 8,
            "track_id": 90
          }
        ],
        "affected_rows": 1
      }
    },
    {
      "type": "procedure",
      "result": {
        "returning": [
          {
            "track_id": 89,
            "playlist_id": 7
          }
        ],
        "affected_rows": 1
      }
    }
  ]
}
