crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__basic__select_by_pk.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      }
    ]
  }
]
