crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__basic__v1_insert_enum.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "type": "procedure",
      "result": {
        "returning": [
          {
            "pips": 14,
            "suit": "hearts"
          }
        ],
        "affected_rows": 1
      }
    }
  ]
}
